[gd_scene load_steps=97 format=2]

[ext_resource path="res://assets/player/character south east.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/character north east.png" type="Texture" id=3]
[ext_resource path="res://assets/player/character south west.png" type="Texture" id=4]
[ext_resource path="res://assets/player/character north west.png" type="Texture" id=5]
[ext_resource path="res://assets/player/character west.png" type="Texture" id=6]
[ext_resource path="res://assets/player/character north.png" type="Texture" id=7]
[ext_resource path="res://assets/player/character south.png" type="Texture" id=8]
[ext_resource path="res://assets/player/character east.png" type="Texture" id=9]
[ext_resource path="res://scenes/player/PlayerSprites.gd" type="Script" id=10]
[ext_resource path="res://scenes/player/directional/SE.gd" type="Script" id=11]
[ext_resource path="res://scenes/player/directional/SW.gd" type="Script" id=12]
[ext_resource path="res://scenes/player/directional/NE.gd" type="Script" id=13]
[ext_resource path="res://scenes/player/directional/NW.gd" type="Script" id=14]
[ext_resource path="res://scenes/player/directional/N.gd" type="Script" id=15]
[ext_resource path="res://scenes/player/directional/S.gd" type="Script" id=16]
[ext_resource path="res://scenes/player/directional/E.gd" type="Script" id=17]
[ext_resource path="res://scenes/player/directional/W.gd" type="Script" id=18]
[ext_resource path="res://scenes/player/LiftingPosition.gd" type="Script" id=19]
[ext_resource path="res://scenes/blocks/BlockEmpty.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/player/highlight.png" type="Texture" id=21]
[ext_resource path="res://scenes/player/StatesPlayer.gd" type="Script" id=22]
[ext_resource path="res://scenes/player/StateMoving.gd" type="Script" id=23]
[ext_resource path="res://scenes/player/StateGrabing.gd" type="Script" id=24]
[ext_resource path="res://scenes/player/SurfSprites.gd" type="Script" id=25]
[ext_resource path="res://assets/entities/palmtree sunk.png" type="Texture" id=26]
[ext_resource path="res://scenes/player/surf_directional/SSE.gd" type="Script" id=27]
[ext_resource path="res://scenes/player/surf_directional/SNW.gd" type="Script" id=28]
[ext_resource path="res://scenes/player/surf_directional/SNE.gd" type="Script" id=29]
[ext_resource path="res://scenes/player/surf_directional/SSW.gd" type="Script" id=30]
[ext_resource path="res://scenes/player/StateSurfing.gd" type="Script" id=31]
[ext_resource path="res://assets/player/playerwalking/southeast/character south east 1.png" type="Texture" id=32]
[ext_resource path="res://assets/player/playerwalking/northwest/character north west 1.png" type="Texture" id=33]
[ext_resource path="res://assets/player/playerwalking/northeast/character north east 1.png" type="Texture" id=34]
[ext_resource path="res://assets/player/playerwalking/north/character north 1.png" type="Texture" id=35]
[ext_resource path="res://assets/player/playerwalking/south/character south 1.png" type="Texture" id=36]
[ext_resource path="res://assets/player/playerwalking/northeast/character north east 2.png" type="Texture" id=37]
[ext_resource path="res://assets/player/playerwalking/southwest/character south west 2.png" type="Texture" id=38]
[ext_resource path="res://assets/player/playerwalking/northwest/character north west 2.png" type="Texture" id=39]
[ext_resource path="res://assets/player/playerwalking/north/character north 2.png" type="Texture" id=40]
[ext_resource path="res://assets/player/playerwalking/south/character south 2.png" type="Texture" id=41]
[ext_resource path="res://assets/player/playerwalking/southeast/character south east 2.png" type="Texture" id=42]
[ext_resource path="res://assets/player/playerwalking/southwest/character south west 1.png" type="Texture" id=43]
[ext_resource path="res://assets/player/playerwalking/west/character west 1.png" type="Texture" id=44]
[ext_resource path="res://assets/player/playerwalking/east/character east 2.png" type="Texture" id=45]
[ext_resource path="res://assets/player/playerwalking/east/character east 1.png" type="Texture" id=46]
[ext_resource path="res://assets/player/playerwalking/west/character west 2.png" type="Texture" id=47]
[ext_resource path="res://assets/player/lifting/lift character south.png" type="Texture" id=48]
[ext_resource path="res://assets/player/lifting/lift character east.png" type="Texture" id=49]
[ext_resource path="res://assets/player/lifting/lift character west.png" type="Texture" id=50]
[ext_resource path="res://assets/player/lifting/lift character north west.png" type="Texture" id=51]
[ext_resource path="res://assets/player/lifting/lift character north east.png" type="Texture" id=52]
[ext_resource path="res://assets/player/lifting/lift character north.png" type="Texture" id=53]
[ext_resource path="res://assets/player/lifting/lift character south west.png" type="Texture" id=54]
[ext_resource path="res://assets/player/lifting/lift character south east.png" type="Texture" id=55]
[ext_resource path="res://assets/player/lifting/east_lift/lift character east 1.png" type="Texture" id=56]
[ext_resource path="res://assets/player/lifting/east_lift/lift character east 2.png" type="Texture" id=57]
[ext_resource path="res://assets/player/lifting/west_lift/lift character west 1.png" type="Texture" id=58]
[ext_resource path="res://assets/player/lifting/west_lift/lift character west 2.png" type="Texture" id=59]
[ext_resource path="res://assets/player/lifting/south_lift/lift character south 1.png" type="Texture" id=60]
[ext_resource path="res://assets/player/lifting/south_lift/lift character south 2.png" type="Texture" id=61]
[ext_resource path="res://assets/player/lifting/north_lift/lift character north 1.png" type="Texture" id=62]
[ext_resource path="res://assets/player/lifting/north_lift/lift character north 2.png" type="Texture" id=63]
[ext_resource path="res://assets/player/lifting/nw_lift/lift character north west 2.png" type="Texture" id=64]
[ext_resource path="res://assets/player/lifting/nw_lift/lift character north west 1.png" type="Texture" id=65]
[ext_resource path="res://assets/player/lifting/ne_lift/lift character north east 1.png" type="Texture" id=66]
[ext_resource path="res://assets/player/lifting/ne_lift/lift character north east 2.png" type="Texture" id=67]
[ext_resource path="res://assets/player/lifting/sw_lift/lift character south west 1.png" type="Texture" id=68]
[ext_resource path="res://assets/player/lifting/sw_lift/lift character south west 2.png" type="Texture" id=69]
[ext_resource path="res://assets/player/lifting/se_lift/lift character south east 1.png" type="Texture" id=70]
[ext_resource path="res://assets/player/lifting/se_lift/lift character south east 2.png" type="Texture" id=71]
[ext_resource path="res://assets/player/coconutdrinking/character coconut 1.png" type="Texture" id=72]
[ext_resource path="res://assets/player/coconutdrinking/character coconut 4.png" type="Texture" id=73]
[ext_resource path="res://assets/player/coconutdrinking/character coconut 2.png" type="Texture" id=74]
[ext_resource path="res://assets/player/coconutdrinking/character coconut 3.png" type="Texture" id=75]
[ext_resource path="res://scenes/player/PlayerCoconut.gd" type="Script" id=76]
[ext_resource path="res://scenes/player/West.gd" type="Script" id=77]
[ext_resource path="res://scenes/player/East.gd" type="Script" id=78]
[ext_resource path="res://scenes/player/SpritesCoconut.gd" type="Script" id=79]
[ext_resource path="res://assets/player/extras/character fallen.png" type="Texture" id=80]
[ext_resource path="res://assets/player/extras/character kneeling east.png" type="Texture" id=81]
[ext_resource path="res://assets/player/extras/character kneeling east blink.png" type="Texture" id=82]
[ext_resource path="res://scenes/player/StateFallen.gd" type="Script" id=83]
[ext_resource path="res://scenes/player/FallenSprites.gd" type="Script" id=84]
[ext_resource path="res://scenes/player/States.gd" type="Script" id=85]
[ext_resource path="res://scenes/player/SurfSpritesLift.gd" type="Script" id=86]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 81 ) ],
"loop": true,
"name": "fall",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 72 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 73 ), ExtResource( 75 ) ],
"loop": true,
"name": "coconut",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 42 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 71 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 38 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 37 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 39 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 64 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 40 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 63 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 41 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 46 ), ExtResource( 45 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 47 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 59 ) ],
"loop": true,
"name": "walk_lift",
"speed": 5.0
} ]

[node name="Player" type="RigidBody2D"]
gravity_scale = 0.0
linear_damp = 50.0
script = ExtResource( 2 )
speed = 250
default_speed = 250

[node name="States" type="Node2D" parent="."]
script = ExtResource( 85 )

[node name="StateFallen" type="Node2D" parent="States"]
visible = false
script = ExtResource( 83 )

[node name="FallenSprites" type="AnimatedSprite" parent="States/StateFallen"]
position = Vector2( 1, -13 )
frames = SubResource( 10 )
animation = "fall"
script = ExtResource( 84 )

[node name="StateCoconut" type="Node2D" parent="States"]
visible = false
position = Vector2( 0, 6 )
script = ExtResource( 76 )

[node name="SpritesCoconut" type="Node2D" parent="States/StateCoconut"]
position = Vector2( 0, -6 )
script = ExtResource( 79 )

[node name="East" type="AnimatedSprite" parent="States/StateCoconut/SpritesCoconut"]
position = Vector2( 8, -14 )
frames = SubResource( 9 )
animation = "coconut"
script = ExtResource( 78 )

[node name="West" type="AnimatedSprite" parent="States/StateCoconut/SpritesCoconut"]
visible = false
position = Vector2( -7, -14 )
frames = SubResource( 9 )
animation = "coconut"
flip_h = true
script = ExtResource( 77 )

[node name="StateSurfing" type="Node2D" parent="States"]
visible = false
script = ExtResource( 31 )

[node name="SurfSprites" type="Node2D" parent="States/StateSurfing"]
position = Vector2( -1, -9 )
script = ExtResource( 25 )

[node name="Palmtree" type="Sprite" parent="States/StateSurfing/SurfSprites"]
position = Vector2( 0, 5 )
texture = ExtResource( 26 )

[node name="SNW" type="Sprite" parent="States/StateSurfing/SurfSprites"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 5 )
script = ExtResource( 28 )

[node name="SNE" type="Sprite" parent="States/StateSurfing/SurfSprites"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 3 )
script = ExtResource( 29 )

[node name="SSE" type="Sprite" parent="States/StateSurfing/SurfSprites"]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
script = ExtResource( 27 )

[node name="SSW" type="Sprite" parent="States/StateSurfing/SurfSprites"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 4 )
script = ExtResource( 30 )

[node name="SurfSpritesLift" type="Node2D" parent="States/StateSurfing"]
visible = false
position = Vector2( -1, -9 )
script = ExtResource( 86 )

[node name="Palmtree" type="Sprite" parent="States/StateSurfing/SurfSpritesLift"]
position = Vector2( 0, 5 )
texture = ExtResource( 26 )

[node name="SNW" type="Sprite" parent="States/StateSurfing/SurfSpritesLift"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 51 )
script = ExtResource( 28 )

[node name="SNE" type="Sprite" parent="States/StateSurfing/SurfSpritesLift"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 52 )
script = ExtResource( 29 )

[node name="SSE" type="Sprite" parent="States/StateSurfing/SurfSpritesLift"]
position = Vector2( 0, -14 )
texture = ExtResource( 55 )
script = ExtResource( 27 )

[node name="SSW" type="Sprite" parent="States/StateSurfing/SurfSpritesLift"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 54 )
script = ExtResource( 30 )

[node name="StatePlayer" type="Node2D" parent="States"]
position = Vector2( 0, 6 )
script = ExtResource( 22 )

[node name="PlayerSprites" type="Node2D" parent="States/StatePlayer"]
position = Vector2( 0, -20 )
script = ExtResource( 10 )

[node name="SE" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/SE"]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/SE"]
visible = false
frames = SubResource( 1 )
animation = "walk"
frame = 1

[node name="SW" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/SW"]
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/SW"]
visible = false
frames = SubResource( 2 )
animation = "walk"
frame = 1

[node name="NE" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/NE"]
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/NE"]
visible = false
frames = SubResource( 3 )
animation = "walk"

[node name="NW" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/NW"]
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/NW"]
visible = false
frames = SubResource( 4 )
animation = "walk"

[node name="N" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/N"]
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/N"]
visible = false
frames = SubResource( 5 )
animation = "walk"

[node name="S" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/S"]
texture = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/S"]
visible = false
frames = SubResource( 6 )
animation = "walk"
frame = 1

[node name="E" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/E"]
texture = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/E"]
visible = false
frames = SubResource( 7 )
animation = "walk"

[node name="W" type="Node2D" parent="States/StatePlayer/PlayerSprites"]
visible = false
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSprites/W"]
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSprites/W"]
visible = false
frames = SubResource( 8 )
animation = "walk"

[node name="PlayerSpritesLift" type="Node2D" parent="States/StatePlayer"]
visible = false
position = Vector2( 0, -20 )
script = ExtResource( 10 )

[node name="SE" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/SE"]
texture = ExtResource( 55 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/SE"]
visible = false
frames = SubResource( 1 )
animation = "walk_lift"

[node name="SW" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/SW"]
texture = ExtResource( 54 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/SW"]
visible = false
frames = SubResource( 2 )
animation = "walk_lift"

[node name="NE" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/NE"]
texture = ExtResource( 52 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/NE"]
visible = false
frames = SubResource( 3 )
animation = "walk_lift"

[node name="NW" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/NW"]
texture = ExtResource( 51 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/NW"]
visible = false
frames = SubResource( 4 )
animation = "walk_lift"

[node name="N" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/N"]
texture = ExtResource( 53 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/N"]
visible = false
frames = SubResource( 5 )
animation = "walk_lift"

[node name="S" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/S"]
texture = ExtResource( 48 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/S"]
visible = false
frames = SubResource( 6 )
animation = "walk_lift"

[node name="E" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/E"]
texture = ExtResource( 49 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/E"]
visible = false
frames = SubResource( 7 )
animation = "walk_lift"

[node name="W" type="Node2D" parent="States/StatePlayer/PlayerSpritesLift"]
visible = false
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="States/StatePlayer/PlayerSpritesLift/W"]
texture = ExtResource( 50 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="States/StatePlayer/PlayerSpritesLift/W"]
visible = false
frames = SubResource( 8 )
animation = "walk_lift"

[node name="StateMoving" type="Node" parent="States/StatePlayer"]
script = ExtResource( 23 )

[node name="StateGrabing" type="Node" parent="States/StatePlayer"]
script = ExtResource( 24 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 1 )
polygon = PoolVector2Array( -7, 4, 0, 8, 7, 4, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="TerrainTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="HighlightTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DamagedTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="InmunityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SinkTimer" type="Timer" parent="."]
wait_time = 1.76
one_shot = true

[node name="Highlight" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 4 )
texture = ExtResource( 21 )

[node name="FeetPosition" type="Position2D" parent="."]
position = Vector2( 0, 4 )

[node name="LiftingPosition" type="Position2D" parent="."]
position = Vector2( 0, -41 )
script = ExtResource( 19 )

[node name="BlockEmpty" parent="LiftingPosition" instance=ExtResource( 20 )]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="animation_finished" from="States/StateFallen/FallenSprites" to="." method="_on_fall_animation_finished"]
[connection signal="animation_finished" from="States/StateCoconut/SpritesCoconut/East" to="." method="_coconut_animation_finished"]
[connection signal="animation_finished" from="States/StateCoconut/SpritesCoconut/West" to="." method="_coconut_animation_finished"]
[connection signal="lift" from="States/StatePlayer" to="." method="lift"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]
[connection signal="timeout" from="TerrainTimer" to="." method="_on_TerrainTimer_timeout"]
[connection signal="timeout" from="HighlightTimer" to="States/StatePlayer" method="_on_HighlightTimer_timeout"]
[connection signal="timeout" from="DamagedTimer" to="." method="_on_DamagedTimer_timeout"]
[connection signal="timeout" from="InmunityTimer" to="." method="_on_InmunityTimer_timeout"]
[connection signal="timeout" from="SinkTimer" to="." method="_on_SinkTimer_timeout"]
